# DryNoMore

./: .gitattributes  .gitignore  .gitmodules  README.md  flake.nix  platformio.ini
hardware/case/: Base.stl  DryNoMoreCase.FCStd  Top.stl
hardware/pcb/dryNoMorePCB/: .gitignore  dryNoMorePCB.kicad_pcb  dryNoMorePCB.kicad_pro  dryNoMorePCB.kicad_sch
hardware/pcb/libs/icon/: icon.kicad_mod  icon_size.txt  vecteezy_abstract-circuit-tree-silhouette-technology-design-element_6173466.eps
include/: adc_measurement.hpp  config.hpp  lan.hpp  lan_protocol.hpp  macros.hpp  packed.hpp  power_ctrl.hpp  progmem_strings.hpp  serial.hpp  settings.hpp  settings_defs.hpp  sleep.hpp  sleep.tpp  watchdog_abuse.hpp
scripts/: apply_patches.py
scripts/patches/: arduino_h.patch  wiring_c.patch
server/telegram_bot/: CMakeLists.txt  example_config.yaml
server/telegram_bot/include/: dry_no_more_server.hpp  lan_protocol.hpp  networking.hpp  packed.hpp  settings_defs.hpp  telegram_bot.hpp  telegram_bot_keyboards.hpp  telegram_bot_utils.hpp  ts_queue.hpp  types.hpp
server/telegram_bot/src/: dry_no_more_server.cpp  main.cpp  networking.cpp  telegram_bot.cpp  telegram_bot_keyboards.cpp  telegram_bot_utils.cpp
src/: adc_measurement.cpp  lan.cpp  main.cpp  power_ctrl.cpp  settings.cpp  sleep.cpp  watchdog_abuse.cpp
